# orchestrator-mcp-server

./: .clinerules  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_tests.sh
MEMORY_BANK/: TASK_PROGRESS.md
docs/: architecture_and_data_model.md  discrepancies.md  howto_create_workflow.md  refactoring_opportunities
examples/workflows/ANALYZE_GITLAB_ISSUE/: index.md
examples/workflows/ANALYZE_GITLAB_ISSUE/steps/: analyze_issue_detail.md  finish.md  get_issue_content.md  handle_file_operation_error.md  label_as_ready.md  label_as_unready_and_comment.md
examples/workflows/COMMIT_SUGGESTER/: index.md
examples/workflows/COMMIT_SUGGESTER/steps/: check_staged_files.md  create_commit.md  get_staged_diffs.md  handle_failure.md  handle_no_staged_files.md  handle_user_cancellation.md  present_and_refine_commit_message.md  suggest_commit_message.md
examples/workflows/JOKE_GENERATOR/: index.md
examples/workflows/JOKE_GENERATOR/steps/: ask_theme.md  congratulations.md  generate_joke.md  greet.md  handle_guess.md  provide_answer.md
examples/workflows/README_FRESHNESS_CHECK/: index.md
examples/workflows/README_FRESHNESS_CHECK/steps/: compare_and_identify_discrepancies.md  confirm_completion.md  explore_codebase.md  read_readme.md  refine_readme.md  report_failure.md  validate_readme.md
examples/workflows/REFACTOR_WITH_TESTS/: index.md
examples/workflows/REFACTOR_WITH_TESTS/steps/: check_old_references.md  (+2 more)
examples/workflows/RESUME/: index.md
examples/workflows/SAVE/: index.md
examples/workflows/SUGGEST_REFACTORING/: index.md
examples/workflows/WORKFLOW_CREATOR/: index.md
src/orchestrator_mcp_server/: __init__.py  __main__.py  ai_client.py  database.py  definition_service.py  engine.py  logger.py  models.py  persistence.py  server.py
tests/: conftest.py
tests/integration/: __init__.py  test_workflow_orchestrator.py
tests/unit/: test_ai_client.py  test_database.py  test_definition_service.py  test_engine.py  test_fixtures.py  test_logger.py  test_persistence.py  test_server.py
(+25 files in other folders)
